# teste-mundo-invest

./: README.md
mundo-invest/: .coverage  .gitignore  Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml
mundo-invest/migrations/: env.py
mundo-invest/migrations/versions/: 04be26170810_adiicionando_init_em_prioridade_e_status.py  20740959c497_amodificando_atributos_da_tabela_e_.py  214187e6ecdb_adicionando_none_true_em_priodade.py  4019e13fee75_atualizando_enum_status.py  7f07ac9b490f_adicionando_foreignkey_na_tablea_webhook.py  a0bed94ea419_criando_tabela_clientes_v1.py  c0f54cac2722_alterando_nome_das_colunas_nome_e_email.py  caf4832b9f5c_adiicionando_tabela_webhook.py  d2cb34fc120b_adiicionando_enum_em_prioridade.py  f7477c32559b_nullable_true_em_client_id.py  f76519021f8a_deixando_o_statuds_como_default.py
mundo-invest/src/mundo_invest/: app.py  database.py  settings.py
mundo-invest/src/mundo_invest/enums/: enums.py
mundo-invest/src/mundo_invest/models/: models.py
mundo-invest/src/mundo_invest/pipefy_client/: pipefy.py
mundo-invest/src/mundo_invest/routers/: cliente_router.py  webhook_router.py
mundo-invest/src/mundo_invest/schemas/: cliente_schemas.py  root_schemas.py  webhook_schemas.py
mundo-invest/src/mundo_invest/services/: cliente_services.py  webhook_services.py
mundo-invest/src/tests/: conftest.py  test_client.py  test_db.py  test_webhook_duplicate.py  test_webhook_prioridade.py
mundo-invest/tests/: conftest.py  test_app.py  test_db.py
